# MyScribe

./: .env  Podmanfile  README.md  nginx.conf  podman-compose.yml  pyproject.toml
MyScribe/: db.sqlite3  manage.py
MyScribe/Auth/: forms.py  urls.py  views.py
MyScribe/Auth/templates/Auth/: login.html  logout.html  profile.html  register.html
MyScribe/Blogs/: forms.py  models.py  urls.py  views.py
MyScribe/Blogs/migrations/: 0001_initial.py
MyScribe/Blogs/templates/Blogs/: base.html  create.html  delete.html  details.html  edit.html  home.html  landing.html  trash.html  update.html
MyScribe/MyScribe/: asgi.py  settings.py  urls.py  wsgi.py
