[project]
name = "MyScribe"
version = "0.1.0"
description = "Personal Blog WebApp"
authors = [{ name = "RynVarkh" }]
requires-python = ">=3.13"

dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
